dfir_rs/tests/snapshots/surface_loop__write@graphvis_mermaid-7.snap
---
source: dfir_rs/tests/surface_loop.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([&quot;alice&quot;, &quot;bob&quot;])</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(iter_batches_stream(0..12, 3))</code>"/]:::pullClass
3v1[\"(3v1) <code>prefix()</code>"/]:::pullClass
4v1[\"(4v1) <code>batch()</code>"/]:::pullClass
5v1[\"(5v1) <code>cross_join()</code>"/]:::pullClass
6v1[\"(6v1) <code>all_once()</code>"/]:::pullClass
7v1[\"(7v1) <code>map(|item| (context.current_tick().0, item))</code>"/]:::pullClass
8v1[/"(8v1) <code>for_each(|x| result_send.send(x).unwrap())</code>"\]:::pushClass
9v1["(9v1) <code>handoff</code>"]:::otherClass
10v1["(10v1) <code>handoff</code>"]:::otherClass
11v1["(11v1) <code>handoff</code>"]:::otherClass
3v1-->|0|5v1
1v1-->9v1
4v1-->|1|5v1
2v1-->10v1
7v1-->8v1
6v1-->7v1
5v1-->11v1
9v1-->3v1
10v1-->4v1
11v1-->6v1
subgraph loop_2v1 ["loop_2v1"]
    6v1
    7v1
    8v1
end
subgraph loop_1v1 ["loop_1v1"]
    3v1
    4v1
    5v1
end
1v1
2v1
